# Underwrite

./: .env.example  .env.prod.example  .gitignore  DESIGN.md  Makefile  PRODUCT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
api/: Dockerfile  alembic.ini  probe_audit.py  pyproject.toml
api/app/: config.py  db.py  demo.py  main.py  seed.py
api/app/api/: deps.py
api/app/api/routes/: auth.py  documents.py  submissions.py
api/app/domain/: enums.py  money.py  rating.py
api/app/models/: __init__.py  audit_event.py  base.py  enrichment.py  extraction.py  quote.py  rating.py  submission.py  user.py
api/app/schemas/: __init__.py  auth.py  companies_house.py  extraction.py  rating.py  read.py  write.py
api/app/services/: audit.py  auth.py  companies_house.py  company_match.py  discrepancies.py  enrichment.py  extraction.py  pdf.py  pipeline.py  quote.py  quote_pdf.py  quote_render.py  rating.py  storage.py
api/app/services/templates/: quote.html.jinja
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 0001_initial_schema.py  2026_07_21_1405-0001_initial_schema.py  2026_07_21_1608-0002_audit_trail_append_only.py  2026_07_21_1714-0003_row_timestamps_not_transaction_.py  2026_07_23_0825-0004_users_and_audit_actor_id.py
api/tests/: conftest.py  factories.py  fakes.py  rating_baseline.py  test_audit.py  test_auth.py  test_companies_house.py  test_company_match.py  test_config.py  test_conventions.py  test_discrepancies.py  test_docs_routing.py  test_enrichment.py  test_extraction.py  test_health.py  test_migrations.py  test_models.py  test_no_deprecated_startup.py  test_ops_actions.py  test_ops_auth.py  test_pdf.py  test_pipeline.py  test_quote_pdf.py  test_rating_engine.py  test_rating_goldens.py  test_rating_properties.py  test_rating_tables.py  test_route_gating.py  test_schemas.py  test_seed.py  test_storage.py  test_submissions_api.py
api/tests/fixtures/extraction/: acme_saas.json  refusal.json
api/tests/fixtures/extraction/emails/: clean.txt  missing_revenue.txt  rambling.txt
api/tests/goldens/: rating_v1_0.json
deploy/: Caddyfile  remote-deploy.sh  underwrite.service
deploy/static/: index.html
design/synthesis/: operator-console.md
docs/: DECISIONS.md  RATING_SPEC.md
infra/: bootstrap.sh  budget.tf  data.tf  ec2.tf  ecr.tf  ecr_api.tf  iam.tf  lambda.tf  oidc.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf  versions.tf
lambdas/pdf_render/: Dockerfile  handler.py  rie_test.sh
scripts/: check_comments.py
web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Login.tsx  index.css  main.tsx  (+1 more)
(+16 files in other folders)
