[project]
name = "underwrite-api"
version = "0.1.0"
description = "Submission-to-quote pipeline for Tech E&O / Cyber"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51,<2.1",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "httpx>=0.28",
    "boto3>=1.35",
    "anthropic>=0.69",
    "rapidfuzz>=3.9",
    "argon2-cffi>=25.1",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "hypothesis>=6.130",
    "ruff>=0.12",
    "moto[s3,server]>=5.0",
    "respx>=0.21",
]
# Dev-only: the in-process LOCAL_PDF renderer. Kept out of the prod image (R6). See D-020.
local-pdf = [
    "weasyprint==69.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
# The engine fixture and its tests must share one loop — asyncpg cannot cross loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--strict-markers"
markers = [
    "llm: hits the live Anthropic API — excluded in CI, costs money and needs a key",
]
# Staying on httpx until respx supports httpx2 — see docs/DECISIONS.md D-002.
filterwarnings = [
    "error",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
